--- a/views/front/kaynak.ejs
+++ b/views/front/kaynak.ejs
@@ -1,5 +1,5 @@
 <% layout("layout") %>
-<header style="display: flex; height: 105px; padding-left: 7vw; padding-right: 7vw; padding-top: 10px; border-radius: 20px;">
+<header style="display: flex; height: 92px; padding-left: 7vw; padding-right: 7vw; padding-top: 10px; border-radius: 20px;">
     <% if (user) { %>
         <div style="flex: 2;">
             <a href="/setting"><ion-icon name="chevron-back-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon></a>
@@ -11,7 +11,7 @@
     <% } %> 
     <div style="flex: 15;">
         <h3 class="leading-6" style="margin-top: 0px; font-size: 15pt; margin-left: -1vw; margin-right: -3vw; color: gray;" class="text-lg font-semibold">
-            sen de kendi çapında bir süper kahramansın <br> fikret. yirmi yıldır aynı kadını sevip günde <br> üç paket sigara içiyorsun kolay değil yani.
+            sen de kendi çapında bir süper kahramansın <br> fikret. yirmi yıldır aynı kadını sevip günde 
         </h3> 
     </div>
     <div style="flex: 2;">
@@ -19,7 +19,7 @@
     </div>
 </header>
 
-    <br><br>
+    <br>
     <div class="main_content">
         <div class="mcontainer">
             <div class="lg:flex lg:space-y-10">
