--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -127,14 +127,16 @@
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 23vw;" class="text-2xl"
+                                                            <a href="/yorumic">
+                                                                <ion-icon style="padding-left: 23vw;" class="text-2xl"
                                                                 name="chatbubble-ellipses-outline"></ion-icon>
 
-                                                            <span class="text-sm"></span>
+                                                            <span class="text-sm"></span></a>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
+                                                           <a href="/kaynak">
                                                             <b>
                                                                 <ion-icon class="text-2xl"
                                                                     style="color:#03A9F4; font-weight:bolder; padding-left: 23vw;"
@@ -142,6 +144,7 @@
 
                                                             </b>
                                                             <span class="text-sm"></span>
+                                                        </a>
                                                         </div>
                                                     </td>
                                                     <td>
