--- a/views/front/reklam.ejs
+++ b/views/front/reklam.ejs
@@ -1,8 +1,104 @@
 <% layout("layout") %>
 
+<% include part/headerflex.ejs %> 
+
+<style>
+    .slidecontainer {
+      width: 90%;
+      margin-left: 5vw;
+      margin-right: 5vw;
+    }
+    
+    .slider {
+      -webkit-appearance: none;
+      width: 100%;
+      height: 15px;
+      border-radius: 5px;
+      background: #d3d3d3;
+      outline: none;
+      opacity: 0.7;
+      -webkit-transition: .2s;
+      transition: opacity .2s;
+    }
+    
+    .slider:hover {
+      opacity: 1;
+    }
+    
+    .slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background: #4CAF50;
+      cursor: pointer;
+    }
+    
+    .slider::-moz-range-thumb {
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background: #4CAF50;
+      cursor: pointer;
+    }
+    </style>
 <div class="main_content" id="app">
     <div class="container">
-        <table class="table">
+        <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Reklam Ayarları</h2>
+            <span class="badge">
+                <label style="padding-left: 20px; padding-top: 10px;">Reklam Görseli</label>
+                <input type="file" class="uk-input" placeholder="ornek">
+            </span>
+            <hr>
+            <span class="badge">
+                <label style="padding-left: 20px; padding-top: 10px;">Reklam Metni</label>
+                <input type="text" class="uk-input" placeholder="ornek">
+            </span>
+            <hr>
+            <span class="badge">
+                <label style="padding-left: 20px; padding-top: 10px;">Reklam Açıklaması</label>
+                <input type="text" class="uk-input" placeholder="ornek">
+            </span>
+            <hr>
+            <span class="badge">
+                <label style="padding-left: 20px; padding-top: 10px;">Reklam URL'i</label>
+                <input type="text" class="uk-input" placeholder="ornek">
+            </span>
+            <span class="badge">
+                <label style="padding-left: 20px; padding-top: 10px;">Reklam Butonu</label>
+                <input type="text" class="uk-input" placeholder="Orn : Satın Al">
+            </span>
+            <!-- <hr style="margin-top: 22px; border: 2px solid darkgray;"> -->
+            <span class="badge">
+                <label style="padding-left: 20px; padding-top: 10px;">Reklam Süresi</label>
+                <div class="slidecontainer">
+                    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                    <p>Gün: <span id="demo"></span></p>
+                  </div>
+            </span>
+        
+       
+          
+    
+    </div>
+</div>
+
+<script>
+    var slider = document.getElementById("myRange");
+    var output = document.getElementById("demo");
+    output.innerHTML = slider.value;
+    
+    slider.oninput = function() {
+      output.innerHTML = this.value;
+    }
+    </script>
+
+<% include part/footerflex.ejs %> 
+
+
+
+<!-- <table class="table">
             <thead>
                 <tr>
                     <th>
@@ -77,6 +173,4 @@
                     </th>
                 </tr>
             </thead>
-        </table>
-    </div>
-</div>
+        </table> -->
