--- a/views/front/reklam.ejs
+++ b/views/front/reklam.ejs
@@ -71,11 +71,28 @@
             </span>
             <!-- <hr style="margin-top: 22px; border: 2px solid darkgray;"> -->
             <span class="badge">
-                <label style="padding-left: 20px; padding-top: 10px;">Reklam Süresi</label>
+                <label style="padding-top: 10px;"><p style="padding-left: 20px;">Süre: <span id="demo"></span> gün</p> </label>
                 <div class="slidecontainer">
-                    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-                    <p>Gün: <span id="demo"></span></p>
+                    <input style="padding-left: 20px;" type="range" min="1" max="100" value="50" class="slider" id="myRange">
                   </div>
+            </span>
+            <span class="badge">
+                <label style="padding-left: 20px; padding-top: 10px;">Bölüm seçiniz</label>
+                <select class="uk-input">
+                    <option value="">Medya</option>
+                    <option value="">Sözlük</option>
+                </select>
+            </span>
+            <span class="badge">
+                <label style="padding-left: 20px; padding-top: 10px;">Tag seçiniz</label>
+                <select class="uk-input">
+                    <option value="">Gündem</option>
+                    <option value="">Siyaset</option>
+                </select>
+            </span>
+
+            <span class="badge" style="padding-top: 50px;">
+                <ion-icon name="arrow-forward-outline" style="color: #0091EA; text-align: right; float: right;" class="text-4xl"></ion-icon>
             </span>
         
        
