--- a/views/front/reklam.ejs
+++ b/views/front/reklam.ejs
@@ -14,7 +14,7 @@
         <!-- <a href="/"><img src="../../../newpan.png" style="height: 34px; width: auto; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto"></a> -->
     </div>
     <div style="flex: 2;">
-        <ion-icon name="arrow-forward-outline" style="color: #0091EA; text-align: right; float: right;" class="text-4xl"></ion-icon>
+        <ion-icon name="arrow-forward-outline" style=" text-align: right; float: right;" class="text-4xl"></ion-icon>
     </div>
 </header>
 
