--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -192,7 +192,7 @@
     })
 </script>
 
-<script src="../../../front/js/jquery-3.3.1.min.js"></script>
+<script src="../../../cropp/libs/jquery.js"></script>
 <script src="../../../front/js/uikit.js"></script>
 <script src="../../../front/js/simplebar.js"></script>
 <script src="../../../front/js/custom.js"></script>
