--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -16,11 +16,7 @@
         integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
         crossorigin="anonymous" />
 
-    <style>
-        html, body, div{
-            background-color: black !important;
-        }
-    </style>
+ 
 
     <header
         style="display: flex; height: 50px; padding-left: 2vw; padding-top: 10px; border-radius: 20px;">
@@ -40,7 +36,7 @@
             
         </div>
     </header>
-    <div class="main_content" style="background-color: darkslateblue;">
+    <div class="main_content">
         <div class="container">
             <div class="lg:flex lg:space-y-10">
                 <div class="lg:w-3/4 lg:px-20 space-y-12">
