--- a/views/front/mesaj/mesajicc.ejs
+++ b/views/front/mesaj/mesajicc.ejs
@@ -31,15 +31,8 @@
                 </div>
                 <hr>
                 <div class="panel-body" id="scrollChat" style="width: 100%; height: 82vh; overflow: scroll;">
-                    <div class="chats" v-for="item in messages" id="scrollChat">
+                    <div class="chats" v-for="item in messages">
                         <div class="chat" v-if="item.user._id == '<%= user._id %>'" style="margin-top: -20px;">
-                            <div class="chat-avatar">
-                                <a class="avatar avatar-online" data-toggle="tooltip" href="#" data-placement="right"
-                                    title="" data-original-title="June Lane">
-                                    <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="...">
-                                    <i></i>
-                                </a>
-                            </div>
                             <div class="chat-body">
                                 <div class="chat-content" style="border-radius: 40px;">
                                     <p>
@@ -49,13 +42,6 @@
                             </div>
                         </div>
                         <div class="chat chat-left" v-else style="margin-top: -20px;">
-                            <div class="chat-avatar">
-                                <a class="avatar avatar-online" data-toggle="tooltip" href="#" data-placement="left"
-                                    title="" data-original-title="Edward Fletcher">
-                                    <img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="...">
-                                    <i></i>
-                                </a>
-                            </div>
                             <div class="chat-body">
                                 <div class="chat-content" style="border-radius: 40px;">
                                     <p>
@@ -99,7 +85,7 @@
                         text:this.text
                     }).then(response=>{
                         if (response.data.status == true) {
-                            alert("Mesaj gönderimi başarıyla gerçekleşti.")
+                            this.text = ""
                         } else {
                             alert("Mesaj gönderiminde bir hata oluştu.")
                         }
@@ -118,7 +104,9 @@
                 }
             },
             created(){
-                this.chatgetir()
+                setInterval(() => {
+                    this.chatgetir()
+                }, 1000);
 
                 setInterval(() => {
                     $('#scrollChat').animate({
