--- a/views/front/auth/register2.ejs
+++ b/views/front/auth/register2.ejs
@@ -33,6 +33,9 @@
             height: 44px !important;
             box-shadow: none !important;
         }
+        *{
+            color: #8ecae6;
+        }
     </style>
 
 </head>
@@ -43,7 +46,7 @@
     <div id="wrapper" class="flex flex-col justify-between h-screen">
 
         <!-- header-->
-        <div class="bg-white py-4 shadow dark:bg-gray-800">
+        <!-- <div class="bg-white py-4 shadow dark:bg-gray-800">
             <div class="max-w-6xl mx-auto">
 
 
@@ -55,12 +58,11 @@
 
                 </div>
             </div>
-        </div>
+        </div> -->
 
-        <!-- Content-->
         <div>
-            <div class="lg:p-12 max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-">
-                <form class="lg:p-10 p-6 space-y-3 relative bg-white shadow-xl rounded-md" action="/users/register" method="POST">
+            <div style="background-image: url(../../backreg.jpeg);">
+                <form class="lg:p-10 p-6 space-y-3 relative rounded-md" action="/users/register" method="POST">
                         <a href="/users/login" class="uk-link text-primary">Zaten bir hesabınız var mı ? <b>Giriş Yap</b></a>
                     <h1 class="lg:text-2xl text-xl font-semibold mb-6"> Kayıt Ol </h1>
 
@@ -121,12 +123,12 @@
 
         <!-- Footer -->
 
-        <div class="lg:mb-5 py-3 uk-link-reset">
+        <!-- <div class="lg:mb-5 py-3 uk-link-reset">
             <div class="flex flex-col items-center justify-between lg:flex-row max-w-6xl mx-auto lg:space-y-0 space-y-3">
 
                 <p class="capitalize"> © copyright 2021 by Panipal</p>
             </div>
-        </div>
+        </div> -->
 
     </div>
 
