--- a/views/front/bildirim.ejs
+++ b/views/front/bildirim.ejs
@@ -52,12 +52,26 @@
                         </div>
                     </div>
                     <hr>
+                    <div style="display: flex; flex-direction: row; padding-top: 4px;">
+                        <div
+                            style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;">
+                            <ion-icon class="text-2xl" name="person-add-outline"></ion-icon>
+                        </div>
+                        <div style="flex:12">
+                            <img src="https://picsum.photos/200"
+                                style="border-radius: 50px; margin-bottom: 6px; height: 40px;">
+                            <p style="margin-top: -11px;"> <a href=""><b>Ahmet </b> ağınıza katıldı. </a> </p>
+                            <!-- <p style="line-height: 1.2;"> <small> 
+                                Yorum metni    
+                            </small> </p> -->
+                        </div>
+                    </div>
                 </div>
                 <div id="medya" style="display: none; padding-left:10px; padding-right:10px;">
                     <div style="display: flex; flex-direction: row; padding-top: 4px;">
                         <div
                             style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;">
-                            <ion-icon name="informotion-circle-outline" class="text-2xl"></ion-icon>
+                            <ion-icon name="information-circle-outline" class="text-2xl"></ion-icon>
                         </div>
                         <div style="flex:12">
                             <img src="../../panpan.png"
@@ -77,7 +91,7 @@
                     <div style="display: flex; flex-direction: row; padding-top: 4px;">
                         <div
                             style="flex:1; align-items: center; justify-content: center; padding-left: 5vw; padding-top: 3px;">
-                            <ion-icon name="informotion-circle-outline" class="text-2xl"></ion-icon>
+                            <ion-icon name="information-circle-outline" class="text-2xl"></ion-icon>
                         </div>
                         <div style="flex:12">
                             <img src="../../panpan.png"
