--- a/views/front/mesaj/mesajicc.ejs
+++ b/views/front/mesaj/mesajicc.ejs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
@@ -17,6 +18,13 @@
         crossorigin="anonymous"></script>
 </head>
 
+<style>
+    textarea {
+  box-sizing: border-box;
+  resize: none;
+}
+</style>
+
 <body>
     <div class="container bootstrap snippets bootdeys" id="app">
         <div class="col-md-7 col-xs-12 col-md-offset-2">
@@ -25,8 +33,9 @@
                     <h3 class="panel-title">
                         <h3 class="text-center">
                             <a href="/mesaj"><i style="float: left;" class="fa fa-chevron-left"
-                                aria-hidden="true"></i></a>
-                             Ad Soyad</h3>
+                                    aria-hidden="true"></i></a>
+                            Ad Soyad
+                        </h3>
                     </h3>
                 </div>
                 <hr>
@@ -56,8 +65,8 @@
                     <hr>
                     <form>
                         <div class="input-group">
-                            <input type="text" v-model="text" style="border-radius: 100px;" class="form-control"
-                                placeholder="Mesajınız giriniz..">
+                            <textarea type="text" v-model="text" style="border-radius: 100px;"
+                                class="form-control" placeholder="Mesajınız giriniz.." data-autoresize rows="2"></textarea>
                             <span class="input-group-btn">
                                 <button class="btn" @click="mesajGonder()" style="border-radius: 100px;" type="button">
                                     <i class="fa fa-chevron-right fa-2x" style="color: #62a8ea;"></i>
@@ -73,17 +82,17 @@
 
     <script>
         new Vue({
-            el:"#app",
-            data:{
-                text:null,
-                messages:null
+            el: "#app",
+            data: {
+                text: null,
+                messages: null
             },
-            methods:{
-                mesajGonder(){
-                    axios.post("/sendmessage",{
-                        mid:'<%= mesaj._id %>',
-                        text:this.text
-                    }).then(response=>{
+            methods: {
+                mesajGonder() {
+                    axios.post("/sendmessage", {
+                        mid: '<%= mesaj._id %>',
+                        text: this.text
+                    }).then(response => {
                         if (response.data.status == true) {
                             this.text = ""
                         } else {
@@ -91,10 +100,10 @@
                         }
                     })
                 },
-                chatgetir(){
-                    axios.post("/chatgetir",{
-                        mid:'<%= mesaj._id %>'
-                    }).then(response=>{
+                chatgetir() {
+                    axios.post("/chatgetir", {
+                        mid: '<%= mesaj._id %>'
+                    }).then(response => {
                         if (response.data.status == true) {
                             this.messages = response.data.chat
                         } else {
@@ -103,7 +112,7 @@
                     })
                 }
             },
-            created(){
+            created() {
                 setInterval(() => {
                     this.chatgetir()
                 }, 1000);
@@ -115,6 +124,17 @@
                 }, 1100);
             }
         })
+    </script>
+
+    <script>
+        jQuery.each(jQuery('textarea[data-autoresize]'), function () {
+            var offset = this.offsetHeight - this.clientHeight;
+
+            var resizeTextarea = function (el) {
+                jQuery(el).css('height', 'auto').css('height', el.scrollHeight + offset);
+            };
+            jQuery(this).on('keyup input', function () { resizeTextarea(this); }).removeAttr('data-autoresize');
+        });
     </script>
 
     <style>
