--- a/views/front/mesaj/mesajicc.ejs
+++ b/views/front/mesaj/mesajicc.ejs
@@ -47,6 +47,7 @@
                                     <p>
                                         {{item.text}}
                                     </p>
+                                <span style="margin-top: -22px;" class="chat-time"><small>1 saniye önce</small></span>
                                 </div>
                             </div>
                         </div>
@@ -56,6 +57,7 @@
                                     <p>
                                         {{item.text}}
                                     </p>
+                                <span style="margin-top: -22px;" class="chat-time"><small>1 saniye önce</small></span>
                                 </div>
                             </div>
                         </div>
@@ -151,7 +153,7 @@
         }
 
         .chats {
-            padding: 30px 15px
+            padding: 22px 9px
         }
 
         .chat-body {
@@ -169,7 +171,7 @@
             display: block;
             float: right;
             padding: 8px 15px;
-            margin: 0 20px 10px 0;
+            margin: 0 10px 5px 0;
             clear: both;
             color: #fff;
             background-color: #62a8ea;
