--- a/views/front/mesdemo.ejs
+++ b/views/front/mesdemo.ejs
@@ -41,11 +41,11 @@
                 <hr>
                 <div class="panel-body" id="scrollChat" style="width: 100%; height: 70vh; overflow: scroll;">
                     <div class="chats" v-for="item in messages">
-                        <div class="chat" v-if="item.user._id == '<%= user._id %>'">
+                        <div class="chat">
                             <div class="chat-body">
                                 <div class="chat-content" style="border-radius: 10px !important;">
                                     <p>
-                                        {{item.text}}
+                                        Deneme
                                     </p>
                                 <span style="margin-top: -22px;" class="chat-time"><small>1 saniye önce</small></span>
                                 </div>
@@ -55,7 +55,7 @@
                             <div class="chat-body">
                                 <div class="chat-content" style="border-radius: 10px !important;">
                                     <p>
-                                        {{item.text}}
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum doloribus vel, eos alias at quasi porro quidem inventore amet debitis eligendi libero hic repellendus ipsum deleniti explicabo maiores minima iusto.
                                     </p>
                                 <span style="margin-top: -22px;" class="chat-time"><small>1 saniye önce</small></span>
                                 </div>
@@ -83,52 +83,6 @@
     </div>
 
     <script>
-        new Vue({
-            el: "#app",
-            data: {
-                text: null,
-                messages: null
-            },
-            methods: {
-                mesajGonder() {
-                    axios.post("/sendmessage", {
-                        mid: '<%= mesaj._id %>',
-                        text: this.text
-                    }).then(response => {
-                        if (response.data.status == true) {
-                            this.text = ""
-                        } else {
-                            alert("Mesaj gönderiminde bir hata oluştu.")
-                        }
-                    })
-                },
-                chatgetir() {
-                    axios.post("/chatgetir", {
-                        mid: '<%= mesaj._id %>'
-                    }).then(response => {
-                        if (response.data.status == true) {
-                            this.messages = response.data.chat
-                        } else {
-                            this.messages = response.data.chat
-                        }
-                    })
-                }
-            },
-            created() {
-                setInterval(() => {
-                    this.chatgetir()
-                }, 1000);
-
-                setInterval(() => {
-                    $('#scrollChat').animate({
-                        scrollTop: $('#scrollChat')[0].scrollHeight
-                    }, "slow");
-                }, 1100);
-            }
-        })
-    </script>
-
-    <script>
         jQuery.each(jQuery('textarea[data-autoresize]'), function () {
             var offset = this.offsetHeight - this.clientHeight;
 
@@ -139,106 +93,106 @@
         });
     </script>
 
-<style>
-    body {
-        background: white;
-        margin-top: 10px;
-    }
+    <style>
+        body {
+            background: white;
+            margin-top: 10px;
+        }
 
-    .chat-box {
-        height: 100%;
-        width: 100%;
-        background-color: #fff;
-        overflow: hidden
-    }
+        .chat-box {
+            height: 100%;
+            width: 100%;
+            background-color: #fff;
+            overflow: hidden
+        }
 
-    .chats {
-        padding: 22px 9px
-    }
+        .chats {
+            padding: 22px 9px
+        }
 
-    .chat-body {
-        display: block;
-        overflow: hidden
-    }
+        .chat-body {
+            display: block;
+            overflow: hidden
+        }
 
-    .chat-body:first-child {
-        margin-top: 0
-    }
+        .chat-body:first-child {
+            margin-top: 0
+        }
 
-    .chat-content {
-        position: relative;
-        display: block;
-        float: right;
-        padding: 8px 15px;
-        margin: 0 10px 5px 0;
-        clear: both;
-        color: #fff;
-        background-color: #62a8ea;
-        border-radius: 4px;
-        -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
-        box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
-    }
-
-
-    .chat-content>p:last-child {
-        margin-bottom: 0
-    }
+        .chat-content {
+            position: relative;
+            display: block;
+            float: right;
+            padding: 8px 15px;
+            margin: 0 10px 5px 0;
+            clear: both;
+            color: #fff;
+            background-color: #62a8ea;
+            border-radius: 4px;
+            -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
+            box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
+        }
 
 
-    .chat-time {
-        display: block;
-        margin-top: 8px;
-        color: rgba(255, 255, 255, .6)
-    }
+        .chat-content>p:last-child {
+            margin-bottom: 0
+        }
 
-    .chat-left .chat-avatar {
-        float: left
-    }
 
-    .chat-left .chat-body {
-        margin-right: 0;
-    }
+        .chat-time {
+            display: block;
+            margin-top: 8px;
+            color: rgba(255, 255, 255, .6)
+        }
 
-    .chat-left .chat-content {
-        float: left;
-        margin-right: 60px;
-        color: #76838f;
-        background-color: #dfe9ef
-    }
+        .chat-left .chat-avatar {
+            float: left
+        }
 
-    .chat-left .chat-time {
-        color: #a3afb7
-    }
+        .chat-left .chat-body {
+            margin-right: 0;
+        }
 
-    .panel-footer {
-        padding: 0 30px 15px;
-        background-color: transparent;
-        border-top: 1px solid transparent;
-        border-bottom-right-radius: 3px;
-        border-bottom-left-radius: 3px;
-    }
+        .chat-left .chat-content {
+            float: left;
+            margin-right: 60px;
+            color: #76838f;
+            background-color: #dfe9ef
+        }
 
-    .avatar img {
-        width: 100%;
-        max-width: 100%;
-        height: auto;
-        border: 0 none;
-        border-radius: 1000px;
-    }
+        .chat-left .chat-time {
+            color: #a3afb7
+        }
 
-    .chat-avatar .avatar {
-        width: 30px;
-    }
+        .panel-footer {
+            padding: 0 30px 15px;
+            background-color: transparent;
+            border-top: 1px solid transparent;
+            border-bottom-right-radius: 3px;
+            border-bottom-left-radius: 3px;
+        }
 
-    .avatar {
-        position: relative;
-        display: inline-block;
-        width: 40px;
-        white-space: nowrap;
-        border-radius: 1000px;
-        vertical-align: bottom;
-    }
-</style>
+        .avatar img {
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+            border: 0 none;
+            border-radius: 1000px;
+        }
+
+        .chat-avatar .avatar {
+            width: 30px;
+        }
+
+        .avatar {
+            position: relative;
+            display: inline-block;
+            width: 40px;
+            white-space: nowrap;
+            border-radius: 1000px;
+            vertical-align: bottom;
+        }
+    </style>
 
 </body>
 
