--- a/views/front/mesdemo.ejs
+++ b/views/front/mesdemo.ejs
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
@@ -16,29 +18,36 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+
 </head>
 
 <style>
     textarea {
-  box-sizing: border-box;
-  resize: none;
-}
+        box-sizing: border-box;
+        resize: none;
+    }
 </style>
 
 <body>
+    <div class="panel-heading" style="border-bottom:1px solid lightgray; border-radius:10px;">
+        <table >
+            <tr>
+                <td>
+                    <ion-icon name="chevron-back-outline" style="color: gray; float: left; font-size: 24pt; padding-left: 20px;"></ion-icon>
+                </td>
+                <td>
+                    <h3 class="panel-title" style="padding-top: 7px; padding-left: 5vw;">Ad Soyad</h3>
+                </td>
+            </tr>
+        </table>
+        
+    </div>
     <div class="container bootstrap snippets bootdeys" id="app">
         <div class="col-md-7 col-xs-12 col-md-offset-2">
+            
             <div class="panel" id="chat">
-                <div class="panel-heading">
-                    <h3 class="panel-title">
-                        <h3 class="text-center">
-                            <a href="/mesaj"><i style="float: left;" class="fa fa-chevron-left"
-                                    aria-hidden="true"></i></a>
-                            Ad Soyad
-                        </h3>
-                    </h3>
-                </div>
-                <hr>
+
                 <div class="panel-body" id="scrollChat" style="width: 100%; height: 70vh; overflow: scroll;">
                     <div class="chats" v-for="item in messages">
                         <div class="chat">
@@ -47,7 +56,8 @@
                                     <p>
                                         Deneme
                                     </p>
-                                <span style="margin-top: -22px;" class="chat-time"><small>1 saniye önce</small></span>
+                                    <span style="margin-top: -22px;" class="chat-time"><small>1 saniye
+                                            önce</small></span>
                                 </div>
                             </div>
                         </div>
@@ -55,9 +65,12 @@
                             <div class="chat-body">
                                 <div class="chat-content" style="border-radius: 10px !important;">
                                     <p>
-                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum doloribus vel, eos alias at quasi porro quidem inventore amet debitis eligendi libero hic repellendus ipsum deleniti explicabo maiores minima iusto.
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum doloribus vel,
+                                        eos alias at quasi porro quidem inventore amet debitis eligendi libero hic
+                                        repellendus ipsum deleniti explicabo maiores minima iusto.
                                     </p>
-                                <span style="margin-top: -22px;" class="chat-time"><small>1 saniye önce</small></span>
+                                    <span style="margin-top: -22px;" class="chat-time"><small>1 saniye
+                                            önce</small></span>
                                 </div>
                             </div>
                         </div>
@@ -67,8 +80,8 @@
                     <hr>
                     <form>
                         <div class="input-group">
-                            <textarea type="text" v-model="text" style="border-radius: 30px;"
-                                class="form-control" placeholder="Mesajınız giriniz.." data-autoresize rows="1"></textarea>
+                            <textarea type="text" v-model="text" style="border-radius: 30px;" class="form-control"
+                                placeholder="Mesajınız giriniz.." data-autoresize rows="1"></textarea>
                             <span class="input-group-btn">
                                 <button class="btn" @click="mesajGonder()" style="border-radius: 100px;" type="button">
                                     <i class="fa fa-chevron-right fa-2x" style="color: #62a8ea;"></i>
