--- a/views/front/mesdemo.ejs
+++ b/views/front/mesdemo.ejs
@@ -30,7 +30,7 @@
 </style>
 
 <body>
-    <div class="panel-heading" style="border-bottom:1px solid #f2f2f2; border-radius:10px; margin-top: -4px;">
+    <div class="panel-heading fixed-top" style="border-bottom:1px solid #f2f2f2; border-radius:10px; background-color: white;">
         <table>
             <tr>
                 <td>
