--- a/views/front/mesdemo.ejs
+++ b/views/front/mesdemo.ejs
@@ -42,15 +42,86 @@
                 </td>
             </tr>
         </table>
-
     </div>
     <div class="container bootstrap snippets bootdeys" id="app">
         <div class="col-md-7 col-xs-12 col-md-offset-2">
 
             <div class="panel" id="chat">
 
-                <div class="panel-body" id="scrollChat" style="width: 100%; height: 70vh; overflow: scroll;">
+                <div class="panel-body" id="scrollChat" style="width: 100%; height: 88vh; overflow: scroll;">
                     <div class="chats" v-for="item in messages">
+                        <div class="chat">
+                            <div class="chat-body">
+                                <div class="chat-content" style="border-radius: 10px !important;">
+                                    <p>
+                                        Deneme
+                                    </p>
+                                    <span style="margin-top: -22px;" class="chat-time"><small>1 saniye
+                                            önce</small></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="chat chat-left" v-else>
+                            <div class="chat-body">
+                                <div class="chat-content" style="border-radius: 10px !important;">
+                                    <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum doloribus vel,
+                                        eos alias at quasi porro quidem inventore amet debitis eligendi libero hic
+                                        repellendus ipsum deleniti explicabo maiores minima iusto.
+                                    </p>
+                                    <span style="margin-top: -22px;" class="chat-time"><small>1 saniye
+                                            önce</small></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="chat">
+                            <div class="chat-body">
+                                <div class="chat-content" style="border-radius: 10px !important;">
+                                    <p>
+                                        Deneme
+                                    </p>
+                                    <span style="margin-top: -22px;" class="chat-time"><small>1 saniye
+                                            önce</small></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="chat chat-left" v-else>
+                            <div class="chat-body">
+                                <div class="chat-content" style="border-radius: 10px !important;">
+                                    <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum doloribus vel,
+                                        eos alias at quasi porro quidem inventore amet debitis eligendi libero hic
+                                        repellendus ipsum deleniti explicabo maiores minima iusto.
+                                    </p>
+                                    <span style="margin-top: -22px;" class="chat-time"><small>1 saniye
+                                            önce</small></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="chat">
+                            <div class="chat-body">
+                                <div class="chat-content" style="border-radius: 10px !important;">
+                                    <p>
+                                        Deneme
+                                    </p>
+                                    <span style="margin-top: -22px;" class="chat-time"><small>1 saniye
+                                            önce</small></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="chat chat-left" v-else>
+                            <div class="chat-body">
+                                <div class="chat-content" style="border-radius: 10px !important;">
+                                    <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum doloribus vel,
+                                        eos alias at quasi porro quidem inventore amet debitis eligendi libero hic
+                                        repellendus ipsum deleniti explicabo maiores minima iusto.
+                                    </p>
+                                    <span style="margin-top: -22px;" class="chat-time"><small>1 saniye
+                                            önce</small></span>
+                                </div>
+                            </div>
+                        </div>
                         <div class="chat">
                             <div class="chat-body">
                                 <div class="chat-content" style="border-radius: 10px !important;">
